Add redux presist to save the store value on refresh

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
+    "redux-persist": "^5.10.0",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
     "resolve": "1.8.1",
